@@ -51,6 +51,7 @@ Changes for 1.3.5.2
 -Added Thwomp (NPC-37) behavior compatibility with SMBX 1.0.x
 -Added the Yoshi mode support for specified songs at the music.ini: mute selected track number without Yoshi, enable it back when Yoshi is presented
 -Fixed a bug when a last world map music is not remembered when sound is disabled
+-Fixed the wrong restart place when running the lasanha of levels and "restart level after death" option is enabled
 
 Changes for 1.3.5.1
 -Episodes and battle levels lists now loading in the separated thread with a progress showing
